<resources>
    <string name="app_name">Pixel Weather</string>
    <string name="appwidget_text">Events</string>
    <string name="add_widget">Add widget</string>

    <!-- Network not available String -->
    <string name="no_network">You are not connected to the Internet.</string>

    <!-- Max Weather Text -->
    <string name="high_temp">Max Temperature</string>

    <!-- Min Weather Text -->
    <string name="low_temp">Min Temperature</string>

    <!-- Humidity Text -->
    <string name="humidity">Humidity</string>

    <!-- Wind Text -->
    <string name="wind">Wind Speed</string>

    <!-- Sunrise Text -->
    <string name="sunrise">Sunrise</string>

    <!-- Sunset Text -->
    <string name="sunset">Sunset</string>

    <!-- Location Disabled by User String -->
    <string name="location_disabled">Locations are Disabled. Click here to go to Location Settings.</string>

    <!-- Google Sign-in String -->
    <string name="google_sign_in">Google Account</string>

    <!-- Exit App String -->
    <string name="exit">Exit</string>

    <!-- Refresh App String -->
    <string name="refresh">Refresh</string>

    <!-- Strings for displaying forecast -->
    <string name="forecast_min_temp">Min Temperature</string>
    <string name="forecast_max_temp">Max Temperature</string>
    <string name="forecast_day_temp">Temperature in day</string>
    <string name="forecast_night_temp">Temperature in night</string>
    <string name="forecast_morning_temp">Temperature in morning</string>
    <string name="forecast_evening_temp">Temperature in evening</string>
    <string name="forecast_humidity">Humidity</string>
    <string name="forecast_cloudiness">Cloudiness</string>
    <string name="forecast_wind">Wind Speed</string>

    <!--Google Account Logout-->
    <string name="google_logout">LogOut</string>

    <!-- Logged in as String -->
    <string name="logged_in">Logged in user</string>

    <!-- Settings String -->
    <string name="settings">Settings</string>

    <!-- Integrate Calendar string -->
    <string name="cal_app">Integrate with Calendar Application</string>

    <!-- Use Fahrenheit String -->
    <string name="use_fahrenheit">Use Fahrenheit as unit scale</string>

    <!-- Show city name String -->
    <string name="show_city_name">Show city name when no upcoming event or reminder.</string>

    <!-- Reminders priority String -->
    <string name="reminder_priority">Give Reminders more importance over Events</string>

    <!-- Use online Calendar String -->
    <string name="use_cal_online"><b>Click here to integrate Online Google Calendar</b> \nIn case you don\'t have Calendar Application, you can integrate Google Calendar from your gmail account and we\'ll sync your events from Online Google Calendar.
        This can be used side by side with <i>\"Integrate with Calendar Application\"</i> feature enabled as well.</string>
    <string name="disconnect_google_cal"><b>Click here to disconnect your Online Google Calendar.</b> Click on logout, to stop the sync of your Online Google Calendar.</string>

    <!-- Note Message -->
    <string name="note_string"><b>Note</b> : If you are using Android Version below Nougat (Android 7 | API 24) or you have connected your online google calendar, then the events and reminders may take up-to 15 minutes to sync with this app\'s widget.</string>

</resources>
