<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:weightSum="15"
    android:orientation="vertical"
    tools:context="com.dev.shreyansh.pixelwidget.ForecastDisplay">

    <TextView
        android:id="@+id/big_city"
        android:layout_width="match_parent"
        android:layout_weight="2.5"
        android:layout_height="0dp"
        android:textSize="48sp"
        style="@style/TextViewCustom" />

    <ImageView
        android:id="@+id/forecast_weather_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.75"
        android:adjustViewBounds="false"
        android:scaleType="center"
        android:layout_gravity="center_vertical|center"
        android:contentDescription="Weather Image"/>

    <!--Start of weather & description-->
    <TextView
        android:id="@+id/main_weather"
        android:layout_width="match_parent"
        android:layout_weight="1.5"
        android:layout_height="0dp"
        style="@style/TextViewCustom"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/desc_weather"
        android:layout_width="match_parent"
        android:layout_weight="1.25"
        android:layout_height="0dp"
        style="@style/TextViewCustom"
        android:textSize="28sp"
        android:layout_marginBottom="8dp"/>
    <!--End of weather & description-->

    <!--Start of max and min temperature-->
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_min_temp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_max_temp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/min_temp_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/max_temp_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>
    </LinearLayout>
    <!--End of max and min temperature-->

    <!--Start of day and night temperature-->
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_day_temp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_night_temp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forecast_day_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/forecast_night_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>
    </LinearLayout>
    <!--End of day and night temperature-->

    <!--Start of morning and evening day temperature-->
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_morning_temp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_evening_temp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forecast_morning_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/forecast_evening_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>
    </LinearLayout>
    <!--End of morning and evening day temperature-->

    <!--Start of humidity cloudiness and wind speed-->
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_cloudiness"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_humidity"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:text="@string/forecast_wind"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forecast_cloudiness_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/forecast_humidity_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/forecast_wind_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/TextViewCustom"
            android:textSize="14sp"/>
    </LinearLayout>
    <!--End of humidity cloudiness and wind speed-->

</LinearLayout>
